[gd_scene load_steps=2 format=3 uid="uid://vrv12gq8ug5l"]

[ext_resource type="Script" uid="uid://85ryxb6tsc6q" path="res://Scripts/controllers/geometria.gd" id="1_6ul76"]

[node name="Geometria_game" type="CanvasLayer"]
script = ExtResource("1_6ul76")

[node name="content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Question_info" type="VBoxContainer" parent="content"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 229.0

[node name="QuestionText" type="Label" parent="content/Question_info"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Pergunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionHolder" type="HBoxContainer" parent="content"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492
anchor_top = 1.0
anchor_right = 0.492
anchor_bottom = 1.0
offset_left = 533.216
offset_top = -95.0
offset_right = 1595.22
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
rotation = -3.14159
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="content"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 1163.0
offset_bottom = 651.0
mouse_filter = 2
color = Color(0.187618, 0.246422, 0.437281, 1)

[connection signal="pressed" from="content/QuestionHolder/Button" to="." method="_on_button_pressed"]
